--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "main": "background.js",
   "dependencies": {
-    "core-js": "^3.8.3",
+    "core-js": "^3.30.0",
+    "mysql2": "^3.2.0",
+    "promise-mysql": "^5.2.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
