--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.30.0",
     "mysql2": "^3.2.0",
     "promise-mysql": "^5.2.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
