--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "argon2": "^0.30.3",
     "core-js": "^3.30.0",
     "mysql2": "^3.2.0",
     "promise-mysql": "^5.2.0",
