--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "argon2": "^0.30.3",
+    "chart.js": "^4.3.0",
     "core-js": "^3.30.0",
     "mysql2": "^3.2.0",
     "promise-mysql": "^5.2.0",
