--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -28,11 +28,16 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "electron": "^13.0.0",
+    "electron": "^19.0.4",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "eslint-plugin-vue": "^8.0.3"
+  },
+  "overrides": {
+    "vue-cli-plugin-electron-builder": {
+      "electron-builder": "^23.1.0"
+    }
   },
   "eslintConfig": {
     "root": true,
