--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mysql2": "^3.2.0",
     "promise-mysql": "^5.2.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6",
+    "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
@@ -29,10 +29,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "electron": "^19.0.4",
-    "vue-cli-plugin-electron-builder": "^2.1.1",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-electron-builder": "^2.1.1"
   },
   "overrides": {
     "vue-cli-plugin-electron-builder": {
